# libebogroll

./: README.md  meson.build
.github/workflows/: build.yml
include/: gdew042c37.h  libebogroll.h  meson.build
src/: bogroll.c  ebogroll.c  gdew042c37.c  meson.build
